--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -1,5 +1,45 @@
-.samsungext-submit-result_show {
+.problem_left {
+    overflow: hidden;
+    // transition-property: width;
+    // transition-duration: 0.3s;
+    // transition-timing-function: ease;
+}
+
+.problem_right {
+    right: 0px;
+    bottom: 0px;
+    padding: 10px;
+}
+
+.samsungext-toggle {
+    flex: initial;
+    cursor: pointer;
+    text-align: center;
+    font-size: 30px;
+    width: 50px;
+    height: 50px;
+    margin-left: 10px;
+}
+.samsungext-problem-left_hide {
     .problem_left {
-        transform: translate3d(0, 0, 0);
+        width: 0px !important;
+        padding: 0px !important;
+        font-size:0 !important;
+    }
+    .problem_right {
+        position: static !important;
+        left: 0px;
+    }
+}
+
+.samsungext-problem-left_show {
+    .problem_left {
+        width: 380px !important;
+        padding: 25px !important;
+        font-size: 100% !important;
+    }
+    .problem_right {
+        position: absolute !important;
+        left: 385px;
     }
 }
